# chitta-research

./: .gitignore  .nfs00000013628b89660033410b  Cargo.toml  Makefile  README.md  agenda.brahman-20260329-110906.yaml  agenda.brahman-20260329-113917.yaml  agenda.brahman-20260329-121108.yaml  agenda.brahman-20260329-124215.yaml  agenda.brahman-20260329-171857.yaml  agenda.brahman-20260329-224747.yaml  agenda.brahman-20260329-225539.yaml  agenda.example.yaml  agenda.mcaf-compression.local-gpu.yaml  agenda.mcaf-compression.yaml  agenda.room.yaml  agenda.self.yaml  agenda.test-local.yaml  build.sh  graph_state.archive-20260329.json  graph_state.self8-final.json  report.html  resources.example.yaml
.scripts/: slurm-serve-ollama.sh
crates/cr-agenda/: Cargo.toml
crates/cr-agenda/src/: lib.rs
crates/cr-agents/: Cargo.toml
crates/cr-agents/src/: adhvaryu.rs  brahman.rs  hotr.rs  kriya.rs  lib.rs  researcher.rs  scout.rs  udgatr.rs
crates/cr-artifacts/: Cargo.toml
crates/cr-artifacts/src/: lib.rs
crates/cr-chitta/: Cargo.toml
crates/cr-chitta/src/: lib.rs
crates/cr-daemon/: Cargo.toml
crates/cr-daemon/src/: main.rs
crates/cr-fitness/: Cargo.toml
crates/cr-fitness/src/: lib.rs
crates/cr-graph/: Cargo.toml
crates/cr-graph/src/: lib.rs
crates/cr-llm/: Cargo.toml
crates/cr-llm/src/: lib.rs  room.rs
crates/cr-reconsolidation/: Cargo.toml
crates/cr-reconsolidation/src/: lib.rs
crates/cr-report/: Cargo.toml
crates/cr-report/src/: main.rs
crates/cr-resources/: Cargo.toml
crates/cr-resources/src/: lib.rs
crates/cr-types/: Cargo.toml
crates/cr-types/src/: lib.rs
docs/: CNAME  index.html  styles.css
scripts/: discover_resources.py  release.sh  verify_mcaf  verify_mcaf.cpp  verify_mcaf.py  web_research.py
