[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = { version = ">=1.38, <1.43", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = ">=1.0, <1.12", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
petgraph = "0.7"
async-trait = "0.1"
reqwest = { version = ">=0.12.0, <0.12.12", features = ["json"] }
git2 = "0.19"
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }

# Constrain transitive deps to edition-2021-compatible versions (toolchain 1.92.0)
getrandom = ">=0.2, <0.3"
clap_lex = ">=0.7, <1.0"
openssl = ">=0.10.40, <0.10.67"
openssl-sys = ">=0.9.80, <0.9.104"

