[package]
name = "cr-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
cr-types = { path = "../cr-types" }
cr-fitness = { path = "../cr-fitness" }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
